--- a/idea-board/package.json
+++ b/idea-board/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
     "react": "16.4.0",
     "react-dom": "16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +17,11 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "react-test-renderer": "16.4.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
